debug the test case